# Finance-Manager-main

./: .env.template  .gitignore  README.md  basic_gui.py  main.py  pyproject.toml
src/: ai.py  config.py  databaseManager.py  financeManager.py  importer.py
src/Ai/: graph.py  prompts.py
src/Ai/llm_router/: router.py
src/Ai/llm_router/models/: Google.py  Groq.py  baseModel.py
src/Ai/nodes/: BaseNode.py  adviceGenerator.py  adviceNode.py  behaviorNode.py  collectorNode.py  goalNode.py  goalPlanner.py  reportEvalNode.py  reportNode.py  transactionNode.py
src/Ai/prompts/: Base.py  __init__.py  advicePrompt.py  behaviourPrompt.py  goalPrompt.py  reportEvalPrompt.py  reportPrompt.py  transactionPrompt.py
src/Ai/schemas/: advice.py  analyzer.py  behavior.py  deep_research.py  goal.py  goalPlanner.py  report.py  report_eval.py  transaction.py
src/Ai/utils/: json_utils.py  logging_config.py
src/Banks/: base.py  pnb.py
src/Classifiers/: base.py  rule_based.py
src/ai/: graph.py  prompts.py
src/ai/nodes/: analyzer.py  collector.py  summarizer.py
src/ai/schemas/: advice.py
src/database/: databaseManager.py  models.py
