[project]
name = "finance-manager-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "typer>=0.16.0",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.6",
    "langgraph>=0.5.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
]
